{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 7,
  "lineage": "6c24285e-796b-b6c1-23db-d24017aea31d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479730477914:security-group/sg-0314ba69be39f8a50",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0314ba69be39f8a50",
            "ingress": [],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "479730477914",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012d3774595b3b7d8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ing1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479730477914:security-group-rule/sgr-019b255893b161e15",
            "cidr_ipv4": "101.188.67.134/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-019b255893b161e15",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0314ba69be39f8a50",
            "security_group_rule_id": "sgr-019b255893b161e15",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ing2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479730477914:security-group-rule/sgr-03b212ab26a9a47e5",
            "cidr_ipv4": "101.188.67.134/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03b212ab26a9a47e5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0314ba69be39f8a50",
            "security_group_rule_id": "sgr-03b212ab26a9a47e5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private-sg"
          ]
        }
      ]
    }
  ]
}